migdb.qvto/transforms/tests/errors/error_addProperty1b.qvto
import builder_errors;
modeltype ERR uses "http://www.collectionspro.eu/jam/mm/errors";

transformation error_addProperty1b(out inoutModel : ERR);

main(){
	var evolutionError : EvolutionError := _evolutionError(
											1, 
											"Property called pr already exist in class Tab",
											"evolution_app.qvto");
	_errorLog(OrderedSet{evolutionError});
}